--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -6,8 +6,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T19:53:35.013401Z",
-     "start_time": "2023-02-22T19:53:33.458923Z"
+     "end_time": "2023-02-22T20:29:48.482778Z",
+     "start_time": "2023-02-22T20:29:47.309385Z"
     }
    },
    "outputs": [],
@@ -43,8 +43,8 @@
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T19:53:35.047470Z",
-     "start_time": "2023-02-22T19:53:35.014475Z"
+     "end_time": "2023-02-22T20:29:48.490970Z",
+     "start_time": "2023-02-22T20:29:48.483841Z"
     }
    },
    "outputs": [],
@@ -270,8 +270,8 @@
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T19:53:48.794051Z",
-     "start_time": "2023-02-22T19:53:35.048280Z"
+     "end_time": "2023-02-22T20:30:01.182453Z",
+     "start_time": "2023-02-22T20:29:48.492505Z"
     }
    },
    "outputs": [],
@@ -301,8 +301,8 @@
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T19:53:50.011342Z",
-     "start_time": "2023-02-22T19:53:48.796183Z"
+     "end_time": "2023-02-22T20:30:03.071553Z",
+     "start_time": "2023-02-22T20:30:01.183669Z"
     }
    },
    "outputs": [
@@ -341,7 +341,7 @@
      "output_type": "stream",
      "text": [
       "Kendall'stau for MI vs Pearson: \n",
-      " SignificanceResult(statistic=0.8122050157867158, pvalue=0.0)\n"
+      " KendalltauResult(correlation=0.8122050157867158, pvalue=0.0)\n"
      ]
     },
     {
@@ -359,7 +359,7 @@
      "output_type": "stream",
      "text": [
       "Kendall'stau for MI vs skMI: \n",
-      " SignificanceResult(statistic=0.2804972540608173, pvalue=0.0)\n"
+      " KendalltauResult(correlation=0.2804972540608173, pvalue=0.0)\n"
      ]
     },
     {
@@ -418,8 +418,8 @@
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T19:53:51.077958Z",
-     "start_time": "2023-02-22T19:53:50.012271Z"
+     "end_time": "2023-02-22T20:30:04.868775Z",
+     "start_time": "2023-02-22T20:30:03.072562Z"
     }
    },
    "outputs": [
@@ -458,7 +458,7 @@
      "output_type": "stream",
      "text": [
       "Kendall'stau for MI vs Pearson: \n",
-      " SignificanceResult(statistic=0.2500737738382302, pvalue=0.0)\n"
+      " KendalltauResult(correlation=0.2500737738382302, pvalue=0.0)\n"
      ]
     },
     {
@@ -476,7 +476,7 @@
      "output_type": "stream",
      "text": [
       "Kendall'stau for MI vs skMI: \n",
-      " SignificanceResult(statistic=0.07859925454199827, pvalue=0.0)\n"
+      " KendalltauResult(correlation=0.07859925454199827, pvalue=0.0)\n"
      ]
     },
     {
@@ -537,8 +537,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T19:53:51.171522Z",
-     "start_time": "2023-02-22T19:53:51.080331Z"
+     "end_time": "2023-02-22T20:30:04.877857Z",
+     "start_time": "2023-02-22T20:30:04.869896Z"
     }
    },
    "outputs": [],
@@ -775,8 +775,8 @@
    "id": "ee471054",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T19:54:04.089599Z",
-     "start_time": "2023-02-22T19:53:51.180583Z"
+     "end_time": "2023-02-22T20:30:17.644717Z",
+     "start_time": "2023-02-22T20:30:04.878888Z"
     }
    },
    "outputs": [],
@@ -801,8 +801,8 @@
    "id": "da95d107",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T19:54:04.189093Z",
-     "start_time": "2023-02-22T19:54:04.092138Z"
+     "end_time": "2023-02-22T20:30:17.657860Z",
+     "start_time": "2023-02-22T20:30:17.646952Z"
     }
    },
    "outputs": [],
@@ -1044,8 +1044,8 @@
    "id": "47f58409",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T19:54:17.537737Z",
-     "start_time": "2023-02-22T19:54:04.190514Z"
+     "end_time": "2023-02-22T20:30:30.838147Z",
+     "start_time": "2023-02-22T20:30:17.658831Z"
     }
    },
    "outputs": [],
@@ -1071,8 +1071,8 @@
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T19:54:17.548952Z",
-     "start_time": "2023-02-22T19:54:17.539832Z"
+     "end_time": "2023-02-22T20:30:30.877713Z",
+     "start_time": "2023-02-22T20:30:30.844948Z"
     }
    },
    "outputs": [],
@@ -1150,8 +1150,8 @@
    "id": "1e3ccaee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T19:54:17.563516Z",
-     "start_time": "2023-02-22T19:54:17.551447Z"
+     "end_time": "2023-02-22T20:30:30.940557Z",
+     "start_time": "2023-02-22T20:30:30.885242Z"
     }
    },
    "outputs": [],
@@ -1244,8 +1244,8 @@
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T19:54:17.637922Z",
-     "start_time": "2023-02-22T19:54:17.565217Z"
+     "end_time": "2023-02-22T20:30:30.993315Z",
+     "start_time": "2023-02-22T20:30:30.955221Z"
     }
    },
    "outputs": [],
@@ -1483,8 +1483,8 @@
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T19:54:30.894809Z",
-     "start_time": "2023-02-22T19:54:17.639594Z"
+     "end_time": "2023-02-22T20:30:44.025623Z",
+     "start_time": "2023-02-22T20:30:30.998839Z"
     }
    },
    "outputs": [],
@@ -1514,8 +1514,8 @@
    "id": "d1bc6195",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T19:54:30.968482Z",
-     "start_time": "2023-02-22T19:54:30.896775Z"
+     "end_time": "2023-02-22T20:30:44.043296Z",
+     "start_time": "2023-02-22T20:30:44.027803Z"
     }
    },
    "outputs": [],
@@ -1758,8 +1758,8 @@
    "id": "75a9b3a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T19:54:44.244448Z",
-     "start_time": "2023-02-22T19:54:30.970205Z"
+     "end_time": "2023-02-22T20:30:56.729364Z",
+     "start_time": "2023-02-22T20:30:44.045595Z"
     }
    },
    "outputs": [],
@@ -1785,8 +1785,8 @@
    "id": "6920631b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T19:54:44.254405Z",
-     "start_time": "2023-02-22T19:54:44.246612Z"
+     "end_time": "2023-02-22T20:30:56.743519Z",
+     "start_time": "2023-02-22T20:30:56.736790Z"
     }
    },
    "outputs": [],
@@ -1857,8 +1857,8 @@
    "id": "49ac60b2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T19:54:44.262247Z",
-     "start_time": "2023-02-22T19:54:44.255974Z"
+     "end_time": "2023-02-22T20:30:56.768050Z",
+     "start_time": "2023-02-22T20:30:56.744563Z"
     }
    },
    "outputs": [],
@@ -1948,7 +1948,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
