--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -6,8 +6,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T20:29:48.482778Z",
-     "start_time": "2023-02-22T20:29:47.309385Z"
+     "end_time": "2023-02-22T21:06:06.518502Z",
+     "start_time": "2023-02-22T21:06:05.492301Z"
     }
    },
    "outputs": [],
@@ -43,8 +43,8 @@
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T20:29:48.490970Z",
-     "start_time": "2023-02-22T20:29:48.483841Z"
+     "end_time": "2023-02-22T21:06:06.527948Z",
+     "start_time": "2023-02-22T21:06:06.519639Z"
     }
    },
    "outputs": [],
@@ -111,7 +111,7 @@
     "    sample=1250000,\n",
     "    multp=10,\n",
     "    core_num=10,\n",
-    "    share_memory={_share_mem_status}, kernel=\"epa\", bw=\"ISJ\")\n",
+    "    share_memory={_share_mem_status}, kernel=\"gaussian\", bw=\"ISJ\", norm=2)\n",
     "if \"{mem_setting}\" == \"high_mem\":\n",
     "    np.save(r\"./ABIDE_age_MI_output\", mi_output)\n",
     "\n",
@@ -169,7 +169,7 @@
     "                                             sample=1250000,\n",
     "                                             multp=10,\n",
     "                                             core_num=10,\n",
-    "                                             share_memory={_share_mem_status}, kernel=\"epa\", bw=\"ISJ\")\n",
+    "                                             share_memory={_share_mem_status}, kernel=\"gaussian\", bw=\"ISJ\")\n",
     "if \"{mem_setting}\" == \"high_mem\":\n",
     "    np.save(r\"./ABIDE_diagnosis_MI_output\", mi_output)\n",
     "\n",
@@ -270,8 +270,8 @@
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T20:30:01.182453Z",
-     "start_time": "2023-02-22T20:29:48.492505Z"
+     "end_time": "2023-02-22T21:06:19.604137Z",
+     "start_time": "2023-02-22T21:06:06.530476Z"
     }
    },
    "outputs": [],
@@ -301,8 +301,8 @@
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T20:30:03.071553Z",
-     "start_time": "2023-02-22T20:30:01.183669Z"
+     "end_time": "2023-02-22T21:06:21.446244Z",
+     "start_time": "2023-02-22T21:06:19.606255Z"
     }
    },
    "outputs": [
@@ -418,8 +418,8 @@
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T20:30:04.868775Z",
-     "start_time": "2023-02-22T20:30:03.072562Z"
+     "end_time": "2023-02-22T21:06:23.186965Z",
+     "start_time": "2023-02-22T21:06:21.447396Z"
     }
    },
    "outputs": [
@@ -537,8 +537,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T20:30:04.877857Z",
-     "start_time": "2023-02-22T20:30:04.869896Z"
+     "end_time": "2023-02-22T21:06:23.196136Z",
+     "start_time": "2023-02-22T21:06:23.188236Z"
     }
    },
    "outputs": [],
@@ -775,8 +775,8 @@
    "id": "ee471054",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T20:30:17.644717Z",
-     "start_time": "2023-02-22T20:30:04.878888Z"
+     "end_time": "2023-02-22T21:06:35.420152Z",
+     "start_time": "2023-02-22T21:06:23.197243Z"
     }
    },
    "outputs": [],
@@ -801,8 +801,8 @@
    "id": "da95d107",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T20:30:17.657860Z",
-     "start_time": "2023-02-22T20:30:17.646952Z"
+     "end_time": "2023-02-22T21:06:35.461328Z",
+     "start_time": "2023-02-22T21:06:35.428233Z"
     }
    },
    "outputs": [],
@@ -1044,8 +1044,8 @@
    "id": "47f58409",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T20:30:30.838147Z",
-     "start_time": "2023-02-22T20:30:17.658831Z"
+     "end_time": "2023-02-22T21:06:48.039539Z",
+     "start_time": "2023-02-22T21:06:35.462613Z"
     }
    },
    "outputs": [],
@@ -1071,8 +1071,8 @@
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T20:30:30.877713Z",
-     "start_time": "2023-02-22T20:30:30.844948Z"
+     "end_time": "2023-02-22T21:06:48.052861Z",
+     "start_time": "2023-02-22T21:06:48.043033Z"
     }
    },
    "outputs": [],
@@ -1150,8 +1150,8 @@
    "id": "1e3ccaee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T20:30:30.940557Z",
-     "start_time": "2023-02-22T20:30:30.885242Z"
+     "end_time": "2023-02-22T21:06:48.104106Z",
+     "start_time": "2023-02-22T21:06:48.054257Z"
     }
    },
    "outputs": [],
@@ -1244,8 +1244,8 @@
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T20:30:30.993315Z",
-     "start_time": "2023-02-22T20:30:30.955221Z"
+     "end_time": "2023-02-22T21:06:48.131821Z",
+     "start_time": "2023-02-22T21:06:48.114245Z"
     }
    },
    "outputs": [],
@@ -1483,8 +1483,8 @@
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T20:30:44.025623Z",
-     "start_time": "2023-02-22T20:30:30.998839Z"
+     "end_time": "2023-02-22T21:07:01.111326Z",
+     "start_time": "2023-02-22T21:06:48.132958Z"
     }
    },
    "outputs": [],
@@ -1514,8 +1514,8 @@
    "id": "d1bc6195",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T20:30:44.043296Z",
-     "start_time": "2023-02-22T20:30:44.027803Z"
+     "end_time": "2023-02-22T21:07:01.130627Z",
+     "start_time": "2023-02-22T21:07:01.119200Z"
     }
    },
    "outputs": [],
@@ -1758,8 +1758,8 @@
    "id": "75a9b3a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T20:30:56.729364Z",
-     "start_time": "2023-02-22T20:30:44.045595Z"
+     "end_time": "2023-02-22T21:07:13.453659Z",
+     "start_time": "2023-02-22T21:07:01.131654Z"
     }
    },
    "outputs": [],
@@ -1785,8 +1785,8 @@
    "id": "6920631b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T20:30:56.743519Z",
-     "start_time": "2023-02-22T20:30:56.736790Z"
+     "end_time": "2023-02-22T21:07:13.470027Z",
+     "start_time": "2023-02-22T21:07:13.460504Z"
     }
    },
    "outputs": [],
@@ -1857,8 +1857,8 @@
    "id": "49ac60b2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-22T20:30:56.768050Z",
-     "start_time": "2023-02-22T20:30:56.744563Z"
+     "end_time": "2023-02-22T21:07:13.507232Z",
+     "start_time": "2023-02-22T21:07:13.471193Z"
     }
    },
    "outputs": [],
