--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -6,8 +6,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-26T06:22:32.961321Z",
-     "start_time": "2023-02-26T06:22:31.821877Z"
+     "end_time": "2023-02-26T17:28:51.132575Z",
+     "start_time": "2023-02-26T17:28:46.508984Z"
     }
    },
    "outputs": [],
@@ -544,8 +544,14 @@
     "                       1:].to_numpy(copy=True), df.iloc[:,\n",
     "                                                        0].to_numpy(copy=True)\n",
     "        X = StandardScaler(copy=False).fit_transform(X)\n",
+    "        # if the outcome is continuous, we have to use binning\n",
+    "        if fun in [ElasticNetCV, LassoCV, RidgeCV, LarsCV, LassoLarsCV, MLPRegressor, RandomForestRegressor]:\n",
+    "            bins = np.linspace(np.min(y)- 1e-8, np.max(y)+1e-8, 50) # choose to use 50 bins\n",
+    "            y_binned = np.digitize(y, bins)\n",
+    "        else:\n",
+    "            y_binned = y.copy()\n",
     "        X_train, X_test, y_train, y_test = train_test_split(\n",
-    "            X, y, train_size=training_proportion, random_state=seed)\n",
+    "            X, y, train_size=training_proportion, random_state=seed, stratify=y_binned)\n",
     "        if fun in [ElasticNetCV, LassoCV]:\n",
     "            fit = fun(cv=5, random_state=seed, n_jobs=10).fit(X_train, y_train)\n",
     "            y_pred = fit.predict(X_test)\n",
@@ -831,8 +837,14 @@
     "                              extrapolation=\"continue\",\n",
     "                              include_bias=False).fit_transform(X)\n",
     "        X = StandardScaler(copy=False).fit_transform(X)\n",
+    "        # if the outcome is continuous, we have to use binning\n",
+    "        if fun in [ElasticNetCV, LassoCV, RidgeCV, LarsCV, LassoLarsCV, MLPRegressor, RandomForestRegressor]:\n",
+    "            bins = np.linspace(np.min(y)- 1e-8, np.max(y)+1e-8, 50) # choose to use 50 bins\n",
+    "            y_binned = np.digitize(y, bins)\n",
+    "        else:\n",
+    "            y_binned = y.copy()\n",
     "        X_train, X_test, y_train, y_test = train_test_split(\n",
-    "            X, y, train_size=training_proportion, random_state=seed)\n",
+    "            X, y, train_size=training_proportion, random_state=seed, stratify=y_binned)\n",
     "        if fun in [ElasticNetCV, LassoCV]:\n",
     "            fit = fun(cv=5, random_state=seed, n_jobs=10).fit(X_train, y_train)\n",
     "            y_pred = fit.predict(X_test)\n",
@@ -1298,8 +1310,14 @@
     "                       1:].to_numpy(copy=True), df.iloc[:,\n",
     "                                                        0].to_numpy(copy=True)\n",
     "        X = StandardScaler(copy=False).fit_transform(X)\n",
+    "        # if the outcome is continuous, we have to use binning\n",
+    "        if fun in [ElasticNetCV, LassoCV, RidgeCV, LarsCV, LassoLarsCV, MLPRegressor, RandomForestRegressor]:\n",
+    "            bins = np.linspace(np.min(y)- 1e-8, np.max(y)+1e-8, 50) # choose to use 50 bins\n",
+    "            y_binned = np.digitize(y, bins)\n",
+    "        else:\n",
+    "            y_binned = y.copy()\n",
     "        X_train, X_test, y_train, y_test = train_test_split(\n",
-    "            X, y, train_size=training_proportion, random_state=seed)\n",
+    "            X, y, train_size=training_proportion, random_state=seed, stratify=y_binned)\n",
     "        if fun in [ElasticNetCV, LassoCV]:\n",
     "            fit = fun(cv=5, random_state=seed, n_jobs=10).fit(X_train, y_train)\n",
     "            y_pred = fit.predict(X_test)\n",
@@ -1592,8 +1610,14 @@
     "                              extrapolation=\"continue\",\n",
     "                              include_bias=False).fit_transform(X)\n",
     "        X = StandardScaler(copy=False).fit_transform(X)\n",
+    "        # if the outcome is continuous, we have to use binning\n",
+    "        if fun in [ElasticNetCV, LassoCV, RidgeCV, LarsCV, LassoLarsCV, MLPRegressor, RandomForestRegressor]:\n",
+    "            bins = np.linspace(np.min(y)- 1e-8, np.max(y)+1e-8, 50) # choose to use 50 bins\n",
+    "            y_binned = np.digitize(y, bins)\n",
+    "        else:\n",
+    "            y_binned = y.copy()\n",
     "        X_train, X_test, y_train, y_test = train_test_split(\n",
-    "            X, y, train_size=training_proportion, random_state=seed)\n",
+    "            X, y, train_size=training_proportion, random_state=seed, stratify=y_binned)\n",
     "        if fun in [ElasticNetCV, LassoCV]:\n",
     "            fit = fun(cv=5, random_state=seed, n_jobs=10).fit(X_train, y_train)\n",
     "            y_pred = fit.predict(X_test)\n",
@@ -1939,7 +1963,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.16"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -1958,6 +1982,19 @@
    "latex_user_defs": false,
    "report_style_numbering": false,
    "user_envs_cfg": false
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   },
   "varInspector": {
    "cols": {
