--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -19,7 +19,8 @@
     "from scipy.stats import kendalltau, rankdata, norm\n",
     "# import fastHDMI as mi\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.preprocessing import StandardScaler, SplineTransformer\n",
+    "from sklearn.preprocessing import StandardScaler, SplineTransformer \n",
+    "from sklearn.decomposition import PCA\n",
     "from sklearn.linear_model import LassoCV, ElasticNetCV, RidgeCV, LarsCV, LassoLarsCV, LogisticRegressionCV, LinearRegression, LogisticRegression\n",
     "from sklearn.neural_network import MLPRegressor, MLPClassifier\n",
     "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier\n",
@@ -36,6 +37,48 @@
    "source": [
     "# Calculate MI for ABIDE data age and diagnosis outcome\n",
     "## this block is only to be run on Compute Canada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b5c16f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# running PCA on it\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from dask import dataframe as dd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import kendalltau, rankdata, norm\n",
+    "import fastHDMI as mi\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.preprocessing import StandardScaler, SplineTransformer\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.linear_model import LassoCV, ElasticNetCV, RidgeCV, LarsCV, LassoLarsCV, LogisticRegressionCV, LinearRegression, LogisticRegression\n",
+    "from sklearn.neural_network import MLPRegressor, MLPClassifier\n",
+    "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier\n",
+    "from sklearn.metrics import r2_score, roc_auc_score\n",
+    "import multiprocess as mp\n",
+    "from tqdm import tqdm\n",
+    "import os\n",
+    "\n",
+    "csv_file = os.environ[\"SLURM_TMPDIR\"] + \\\n",
+    "    r\"/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
+    "abide = pd.read_csv(csv_file, encoding=\"unicode_escape\", engine=\"c\")\n",
+    "_abide_name = abide.columns.tolist()[1:]\n",
+    "abide_name = _abide_name[1:-3]\n",
+    "abide = abide[[abide_name]]\n",
+    "abide = StandardScaler(copy=False).fit_transform(abide).to_numpy(copy=False)\n",
+    "\n",
+    "pca = PCA(n_components=abide.shape[0])\n",
+    "components = pca.fit(\n",
+    "    abide\n",
+    ").components_.T  # transpose because it's a ndarray of shape (n_components, n_features)\n",
+    "pca_output = abide @ components\n",
+    "np.save(r\"./ABIDE_PCA\", pca_output)"
    ]
   },
   {
@@ -70,7 +113,8 @@
     "from scipy.stats import kendalltau, rankdata, norm\n",
     "import fastHDMI as mi\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.preprocessing import StandardScaler, SplineTransformer\n",
+    "from sklearn.preprocessing import StandardScaler, SplineTransformer \n",
+    "from sklearn.decomposition import PCA\n",
     "from sklearn.linear_model import LassoCV, ElasticNetCV, RidgeCV, LarsCV, LassoLarsCV, LogisticRegressionCV, LinearRegression, LogisticRegression\n",
     "from sklearn.neural_network import MLPRegressor, MLPClassifier\n",
     "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier\n",
@@ -504,7 +548,8 @@
     "from scipy.stats import kendalltau, rankdata, norm\n",
     "import fastHDMI as mi\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.preprocessing import StandardScaler, SplineTransformer\n",
+    "from sklearn.preprocessing import StandardScaler, SplineTransformer \n",
+    "from sklearn.decomposition import PCA\n",
     "from sklearn.linear_model import LassoCV, ElasticNetCV, RidgeCV, LarsCV, LassoLarsCV, LogisticRegressionCV, LinearRegression, LogisticRegression\n",
     "from sklearn.neural_network import MLPRegressor, MLPClassifier\n",
     "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier\n",
@@ -845,7 +890,8 @@
     "from scipy.stats import kendalltau, rankdata, norm\n",
     "import fastHDMI as mi\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.preprocessing import StandardScaler, SplineTransformer\n",
+    "from sklearn.preprocessing import StandardScaler, SplineTransformer \n",
+    "from sklearn.decomposition import PCA\n",
     "from sklearn.linear_model import LassoCV, ElasticNetCV, RidgeCV, LarsCV, LassoLarsCV, LogisticRegressionCV, LinearRegression, LogisticRegression\n",
     "from sklearn.neural_network import MLPRegressor, MLPClassifier\n",
     "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier\n",
@@ -1547,7 +1593,8 @@
     "from scipy.stats import kendalltau, rankdata, norm\n",
     "import fastHDMI as mi\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.preprocessing import StandardScaler, SplineTransformer\n",
+    "from sklearn.preprocessing import StandardScaler, SplineTransformer \n",
+    "from sklearn.decomposition import PCA\n",
     "from sklearn.linear_model import LassoCV, ElasticNetCV, RidgeCV, LarsCV, LassoLarsCV, LogisticRegressionCV, LinearRegression, LogisticRegression\n",
     "from sklearn.neural_network import MLPRegressor, MLPClassifier\n",
     "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier\n",
@@ -1882,7 +1929,8 @@
     "from scipy.stats import kendalltau, rankdata, norm\n",
     "import fastHDMI as mi\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.preprocessing import StandardScaler, SplineTransformer\n",
+    "from sklearn.preprocessing import StandardScaler, SplineTransformer \n",
+    "from sklearn.decomposition import PCA\n",
     "from sklearn.linear_model import LassoCV, ElasticNetCV, RidgeCV, LarsCV, LassoLarsCV, LogisticRegressionCV, LinearRegression, LogisticRegression\n",
     "from sklearn.neural_network import MLPRegressor, MLPClassifier\n",
     "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier\n",
@@ -2485,7 +2533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
