--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -67,11 +67,9 @@
     "\n",
     "csv_file = os.environ[\"SLURM_TMPDIR\"] + \\\n",
     "    r\"/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
-    "abide = pd.read_csv(csv_file, encoding=\"unicode_escape\", engine=\"c\")\n",
-    "_abide_name = abide.columns.tolist()[1:]\n",
-    "abide_name = _abide_name[1:-3]\n",
-    "abide = abide[[abide_name]]\n",
-    "abide = StandardScaler(copy=False).fit_transform(abide).to_numpy(copy=False)\n",
+    "abide = pd.read_csv(csv_file, encoding=\"unicode_escape\",\n",
+    "                    engine=\"c\").iloc[:, 2:-3].to_numpy(copy=False)\n",
+    "abide = StandardScaler(copy=False).fit_transform(abide)\n",
     "\n",
     "pca = PCA(n_components=abide.shape[0])\n",
     "components = pca.fit(\n",
@@ -2533,7 +2531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
