--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -67,8 +67,11 @@
     "\n",
     "csv_file = os.environ[\"SLURM_TMPDIR\"] + \\\n",
     "    r\"/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
-    "abide = pd.read_csv(csv_file, encoding=\"unicode_escape\",\n",
-    "                    engine=\"c\").iloc[:, 2:-3].to_numpy(copy=False)\n",
+    "abide = pd.read_csv(csv_file, encoding=\"unicode_escape\", engine=\"c\")\n",
+    "_sex = abide[\"SEX\"].tolist()\n",
+    "_age = abide[\"AGE_AT_SCAN\"].tolist()\n",
+    "_diagnosis = abide[\"DX_GROUP\"].tolist()\n",
+    "abide = abide.iloc[:, 2:-3].to_numpy(copy=False)\n",
     "abide = StandardScaler(copy=False).fit_transform(abide)\n",
     "\n",
     "pca = PCA(n_components=abide.shape[0])\n",
@@ -76,7 +79,12 @@
     "    abide\n",
     ").components_.T  # transpose because it's a ndarray of shape (n_components, n_features)\n",
     "pca_output = abide @ components\n",
-    "np.save(r\"./ABIDE_PCA\", pca_output)"
+    "cols = [\"PC_\" + str(j + 1) for j in range(pca_output.shape[1])]\n",
+    "df = pd.dataframe(pca_output, columns=cols)\n",
+    "df[\"SEX\"] = _sex\n",
+    "df[\"AGE_AT_SCAN\"] = _age\n",
+    "df[\"DX_GROUP\"] = _diagnosis\n",
+    "df.to_csv(r\"./ABIDE_PCA\")"
    ]
   },
   {
