--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -45,8 +45,8 @@
    "id": "1b5c16f0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-16T18:05:06.220665Z",
-     "start_time": "2023-03-16T18:05:06.216950Z"
+     "end_time": "2023-03-16T18:21:20.101553Z",
+     "start_time": "2023-03-16T18:21:20.095137Z"
     }
    },
    "outputs": [],
@@ -85,7 +85,7 @@
     "# ).components_.T  # transpose because it's a ndarray of shape (n_components, n_features)\n",
     "# pca_output = abide @ components\n",
     "# cols = [\"PC_\" + str(j + 1) for j in range(pca_output.shape[1])]\n",
-    "# df = pd.dataframe(pca_output, columns=cols)\n",
+    "# df = pd.DataFrame(pca_output, columns=cols)\n",
     "# df[\"SEX\"] = _sex\n",
     "# df[\"AGE_AT_SCAN\"] = _age\n",
     "# df[\"DX_GROUP\"] = _diagnosis\n",
