--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -6,8 +6,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-21T20:41:06.077898Z",
-     "start_time": "2023-03-21T20:41:04.731178Z"
+     "end_time": "2023-04-03T19:05:12.774929Z",
+     "start_time": "2023-04-03T19:05:11.742708Z"
     }
    },
    "outputs": [],
@@ -45,8 +45,8 @@
    "id": "1b5c16f0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-21T20:41:06.081686Z",
-     "start_time": "2023-03-21T20:41:06.079128Z"
+     "end_time": "2023-04-03T19:05:12.778633Z",
+     "start_time": "2023-04-03T19:05:12.776078Z"
     }
    },
    "outputs": [],
@@ -98,8 +98,8 @@
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-21T20:41:06.110290Z",
-     "start_time": "2023-03-21T20:41:06.083709Z"
+     "end_time": "2023-04-03T19:05:12.805814Z",
+     "start_time": "2023-04-03T19:05:12.780300Z"
     }
    },
    "outputs": [],
@@ -357,8 +357,8 @@
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-21T20:41:06.146512Z",
-     "start_time": "2023-03-21T20:41:06.111463Z"
+     "end_time": "2023-04-03T19:05:12.827852Z",
+     "start_time": "2023-04-03T19:05:12.807098Z"
     }
    },
    "outputs": [],
@@ -388,8 +388,8 @@
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-21T20:41:06.170727Z",
-     "start_time": "2023-03-21T20:41:06.148112Z"
+     "end_time": "2023-04-03T19:05:12.855002Z",
+     "start_time": "2023-04-03T19:05:12.828864Z"
     }
    },
    "outputs": [],
@@ -438,8 +438,8 @@
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-21T20:41:06.192041Z",
-     "start_time": "2023-03-21T20:41:06.172577Z"
+     "end_time": "2023-04-03T19:05:12.865570Z",
+     "start_time": "2023-04-03T19:05:12.856230Z"
     }
    },
    "outputs": [],
@@ -476,6 +476,138 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d89ebdd3",
+   "metadata": {},
+   "source": [
+    "# A scatter plot for age and diagnosis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "dfce6fd6",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-03T19:05:12.881959Z",
+     "start_time": "2023-04-03T19:05:12.866879Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "\n",
+    "def job_creator():\n",
+    "    Path(r\"./ABIDE_scatterplot/scatter_plot_for_most_associated.sh\").touch()\n",
+    "    Path(r\"./ABIDE_scatterplot/scatter_plot_for_most_associated.py\").touch()\n",
+    "    bash_script = open(\n",
+    "        r\"./ABIDE_scatterplot/scatter_plot_for_most_associated.sh\", \"w\")\n",
+    "    py_script = open(\n",
+    "        r\"./ABIDE_scatterplot/scatter_plot_for_most_associated.py\", \"w\")\n",
+    "    bash_script.write(r\"\"\"#!/bin/bash\n",
+    "#SBATCH --account=def-masd\n",
+    "#SBATCH --nodes=1\n",
+    "#SBATCH --cpus-per-task=10\n",
+    "#SBATCH --mem=80G\n",
+    "#SBATCH --time=2:00:00\n",
+    "#SBATCH --job-name=scatter_plot_for_most_associated\n",
+    "\n",
+    "module load gcc llvm rust arrow cuda nodejs python/3.8.10 r/4.0.2 python-build-bundle\n",
+    "\n",
+    "virtualenv --no-download $SLURM_TMPDIR/env\n",
+    "source $SLURM_TMPDIR/env/bin/activate\n",
+    "pip install --no-index --upgrade pip\n",
+    "\n",
+    "# ### run this block at the login node to build wheels\n",
+    "# ### get wheels builder\n",
+    "# git clone https://github.com/ComputeCanada/wheels_builder\n",
+    "# export PATH=$PATH:${{HOME}}/wheels_builder\n",
+    "# ### build KDEpy 1.1.0\n",
+    "# ${{HOME}}/wheels_builder/unmanylinuxize.sh --package KDEpy --version 1.1.0 --python 3.8,3.9,3.10 --find_links https://files.pythonhosted.org/packages/\n",
+    "# ### built nonconvexAG 1.0.6\n",
+    "# ${{HOME}}/wheels_builder/unmanylinuxize.sh --package nonconvexAG --version 1.0.6 --python 3.8,3.9,3.10 --find_links https://files.pythonhosted.org/packages/\n",
+    "# ### built fastHDMI 1.18.20\n",
+    "# ${{HOME}}/wheels_builder/unmanylinuxize.sh --package fastHDMI --version 1.18.20 --python 3.8,3.9,3.10 --find_links https://files.pythonhosted.org/packages/\n",
+    "\n",
+    "# Here basically to build the packages at login node and install them in slurm job submission locally\n",
+    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2\n",
+    "pip install --no-index /home/kyang/KDEpy-1.1.0+computecanada-cp38-cp38-linux_x86_64.whl\n",
+    "pip install --no-index /home/kyang/nonconvexAG-1.0.6+computecanada-py3-none-any.whl\n",
+    "pip install --no-index /home/kyang/fastHDMI-1.18.20+computecanada-py3-none-any.whl\n",
+    "\n",
+    "nvidia-smi\n",
+    "lscpu\n",
+    "\n",
+    "echo \"running scatter_plot_for_most_associated.py\"\n",
+    "\n",
+    "cp /home/kyang/projects/def-cgreenwo/abide_data/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv $SLURM_TMPDIR/\n",
+    "cp ../ABIDE_columns.npy $SLURM_TMPDIR/\n",
+    "cp ../ABIDE_age_MI_epa_ISJ_output.npy $SLURM_TMPDIR/\n",
+    "cp ../ABIDE_age_Pearson_output.npy $SLURM_TMPDIR/\n",
+    "cp ../ABIDE_age_skMI_output.npy $SLURM_TMPDIR/\n",
+    "cp ../ABIDE_diagnosis_MI_epa_ISJ_output.npy $SLURM_TMPDIR/\n",
+    "cp ../ABIDE_diagnosis_Pearson_output.npy $SLURM_TMPDIR/\n",
+    "cp ../ABIDE_diagnosis_skMI_output.npy $SLURM_TMPDIR/\n",
+    "\n",
+    "python3 scatter_plot_for_most_associated.py\n",
+    "    \"\"\")\n",
+    "    py_script.write(r\"\"\"import numpy as np\n",
+    "import pandas as pd\n",
+    "from dask import dataframe as dd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import kendalltau, rankdata, norm\n",
+    "import fastHDMI as mi\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.preprocessing import StandardScaler, SplineTransformer\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.linear_model import LassoCV, ElasticNetCV, RidgeCV, LarsCV, LassoLarsCV, LogisticRegressionCV, LinearRegression, LogisticRegression\n",
+    "from sklearn.neural_network import MLPRegressor, MLPClassifier\n",
+    "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier\n",
+    "from sklearn.metrics import r2_score, roc_auc_score\n",
+    "import multiprocess as mp\n",
+    "from tqdm import tqdm\n",
+    "import os\n",
+    "\n",
+    "csv_file = os.environ[\"SLURM_TMPDIR\"] + \\\n",
+    "    r\"/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
+    "original_df = pd.read_csv(csv_file, encoding=\"unicode_escape\", engine=\"c\")\n",
+    "\n",
+    "top_colnames_num = 5\n",
+    "\n",
+    "csv_file = os.environ[\"SLURM_TMPDIR\"] + \\\n",
+    "    r\"/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
+    "original_df = pd.read_csv(csv_file, encoding=\"unicode_escape\", engine=\"c\")\n",
+    "\n",
+    "columns = np.load(os.environ[\"SLURM_TMPDIR\"] + r\"/ABIDE_columns.npy\")\n",
+    "\n",
+    "for outcome in [\"diagnosis\", \"age\"]:\n",
+    "    top_colnames = []\n",
+    "    for dep_measure in [\"MI_epa_ISJ\", \"Pearson\", \"skMI\"]:\n",
+    "        abide_dep = np.load(os.environ[\"SLURM_TMPDIR\"] + r\"/ABIDE_\" + outcome +\n",
+    "                            r\"_\" + dep_measure + r\"_output.npy\")\n",
+    "        abide_dep = np.absolute(abide_dep)\n",
+    "\n",
+    "        top_colnames += columns[np.argsort(-abide_dep)][:top_colnames_num]\n",
+    "\n",
+    "    top_colnames = list(set(top_colnames))\n",
+    "    for colname in top_colnames:\n",
+    "        if outcome == \"diagnosis\":\n",
+    "            plt.scatter(original_df[\"DX_GROUP\"], original_df[colname])\n",
+    "        if outcome == \"age\":\n",
+    "            plt.scatter(original_df[\"AGE_AT_SCAN\"], original_df[colname])\n",
+    "        plt.ylabel(outcome)\n",
+    "        plt.xlabel(colname)\n",
+    "        plt.title(\"scatter plot for top associated covariates\")\n",
+    "        plt.savefig(r\"scatter_\" + outcome + colname)\n",
+    "        plt.show()\n",
+    "    \"\"\")\n",
+    "\n",
+    "\n",
+    "job_creator()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4447fa79",
    "metadata": {},
    "source": [
@@ -486,12 +618,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-21T20:41:06.288547Z",
-     "start_time": "2023-03-21T20:41:06.194487Z"
+     "end_time": "2023-04-03T19:05:12.935056Z",
+     "start_time": "2023-04-03T19:05:12.883360Z"
     }
    },
    "outputs": [],
@@ -791,12 +923,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ee471054",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-21T20:41:06.293868Z",
-     "start_time": "2023-03-21T20:41:06.290705Z"
+     "end_time": "2023-04-03T19:05:12.937938Z",
+     "start_time": "2023-04-03T19:05:12.936006Z"
     }
    },
    "outputs": [],
@@ -817,12 +949,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "da95d107",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-21T20:41:06.378230Z",
-     "start_time": "2023-03-21T20:41:06.296360Z"
+     "end_time": "2023-04-03T19:05:12.976006Z",
+     "start_time": "2023-04-03T19:05:12.938971Z"
     }
    },
    "outputs": [],
@@ -1127,12 +1259,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "47f58409",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-21T20:41:06.383158Z",
-     "start_time": "2023-03-21T20:41:06.380185Z"
+     "end_time": "2023-04-03T19:05:12.978707Z",
+     "start_time": "2023-04-03T19:05:12.976970Z"
     }
    },
    "outputs": [],
@@ -1154,12 +1286,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-21T20:41:08.027816Z",
-     "start_time": "2023-03-21T20:41:06.385210Z"
+     "end_time": "2023-04-03T19:05:14.450798Z",
+     "start_time": "2023-04-03T19:05:12.981280Z"
     }
    },
    "outputs": [
@@ -1331,12 +1463,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "1e3ccaee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-21T20:41:09.508827Z",
-     "start_time": "2023-03-21T20:41:08.030301Z"
+     "end_time": "2023-04-03T19:05:15.933910Z",
+     "start_time": "2023-04-03T19:05:14.452000Z"
     }
    },
    "outputs": [
@@ -1524,12 +1656,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-21T20:41:09.539794Z",
-     "start_time": "2023-03-21T20:41:09.509981Z"
+     "end_time": "2023-04-03T19:05:15.968911Z",
+     "start_time": "2023-04-03T19:05:15.935069Z"
     }
    },
    "outputs": [],
@@ -1831,12 +1963,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-21T20:41:09.558102Z",
-     "start_time": "2023-03-21T20:41:09.540909Z"
+     "end_time": "2023-04-03T19:05:15.971604Z",
+     "start_time": "2023-04-03T19:05:15.970048Z"
     }
    },
    "outputs": [],
@@ -1862,12 +1994,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "d1bc6195",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-21T20:41:09.604117Z",
-     "start_time": "2023-03-21T20:41:09.559254Z"
+     "end_time": "2023-04-03T19:05:16.008859Z",
+     "start_time": "2023-04-03T19:05:15.972876Z"
     }
    },
    "outputs": [],
@@ -2174,12 +2306,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "75a9b3a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-21T20:44:20.479195Z",
-     "start_time": "2023-03-21T20:41:09.605229Z"
+     "end_time": "2023-04-03T19:11:29.107140Z",
+     "start_time": "2023-04-03T19:05:16.010001Z"
     }
    },
    "outputs": [],
@@ -2201,12 +2333,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "6920631b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-21T20:44:21.410023Z",
-     "start_time": "2023-03-21T20:44:20.481650Z"
+     "end_time": "2023-04-03T19:11:30.136683Z",
+     "start_time": "2023-04-03T19:11:29.113414Z"
     }
    },
    "outputs": [
@@ -2359,12 +2491,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "e899df18",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-21T20:44:22.278563Z",
-     "start_time": "2023-03-21T20:44:21.411059Z"
+     "end_time": "2023-04-03T19:11:31.019838Z",
+     "start_time": "2023-04-03T19:11:30.138012Z"
     }
    },
    "outputs": [
@@ -2601,7 +2733,7 @@
     "instance",
     "_Feature"
    ],
-   "window_display": true
+   "window_display": false
   }
  },
  "nbformat": 4,
