--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -6,8 +6,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-03T19:05:12.774929Z",
-     "start_time": "2023-04-03T19:05:11.742708Z"
+     "end_time": "2023-04-04T20:30:39.773026Z",
+     "start_time": "2023-04-04T20:30:38.439796Z"
     }
    },
    "outputs": [],
@@ -45,8 +45,8 @@
    "id": "1b5c16f0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-03T19:05:12.778633Z",
-     "start_time": "2023-04-03T19:05:12.776078Z"
+     "end_time": "2023-04-04T20:30:39.776529Z",
+     "start_time": "2023-04-04T20:30:39.774737Z"
     }
    },
    "outputs": [],
@@ -98,8 +98,8 @@
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-03T19:05:12.805814Z",
-     "start_time": "2023-04-03T19:05:12.780300Z"
+     "end_time": "2023-04-04T20:30:39.806676Z",
+     "start_time": "2023-04-04T20:30:39.777336Z"
     }
    },
    "outputs": [],
@@ -357,8 +357,8 @@
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-03T19:05:12.827852Z",
-     "start_time": "2023-04-03T19:05:12.807098Z"
+     "end_time": "2023-04-04T20:30:39.809022Z",
+     "start_time": "2023-04-04T20:30:39.807545Z"
     }
    },
    "outputs": [],
@@ -388,8 +388,8 @@
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-03T19:05:12.855002Z",
-     "start_time": "2023-04-03T19:05:12.828864Z"
+     "end_time": "2023-04-04T20:30:39.811352Z",
+     "start_time": "2023-04-04T20:30:39.809827Z"
     }
    },
    "outputs": [],
@@ -438,8 +438,8 @@
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-03T19:05:12.865570Z",
-     "start_time": "2023-04-03T19:05:12.856230Z"
+     "end_time": "2023-04-04T20:30:39.813755Z",
+     "start_time": "2023-04-04T20:30:39.812170Z"
     }
    },
    "outputs": [],
@@ -488,8 +488,8 @@
    "id": "dfce6fd6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-03T19:05:12.881959Z",
-     "start_time": "2023-04-03T19:05:12.866879Z"
+     "end_time": "2023-04-04T20:30:39.821364Z",
+     "start_time": "2023-04-04T20:30:39.814494Z"
     }
    },
    "outputs": [],
@@ -587,7 +587,8 @@
     "                            r\"_\" + dep_measure + r\"_output.npy\")\n",
     "        abide_dep = np.absolute(abide_dep)\n",
     "\n",
-    "        top_colnames += columns[np.argsort(-abide_dep)][:top_colnames_num]\n",
+    "        top_colnames = np.hstack(\n",
+    "            (top_colnames, columns[np.argsort(-abide_dep)][:top_colnames_num]))\n",
     "\n",
     "    top_colnames = list(set(top_colnames))\n",
     "    for colname in top_colnames:\n",
@@ -622,8 +623,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-03T19:05:12.935056Z",
-     "start_time": "2023-04-03T19:05:12.883360Z"
+     "end_time": "2023-04-04T20:30:41.053101Z",
+     "start_time": "2023-04-04T20:30:39.822328Z"
     }
    },
    "outputs": [],
@@ -927,8 +928,8 @@
    "id": "ee471054",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-03T19:05:12.937938Z",
-     "start_time": "2023-04-03T19:05:12.936006Z"
+     "end_time": "2023-04-04T20:30:41.061213Z",
+     "start_time": "2023-04-04T20:30:41.055736Z"
     }
    },
    "outputs": [],
@@ -953,8 +954,8 @@
    "id": "da95d107",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-03T19:05:12.976006Z",
-     "start_time": "2023-04-03T19:05:12.938971Z"
+     "end_time": "2023-04-04T20:30:42.224237Z",
+     "start_time": "2023-04-04T20:30:41.064127Z"
     }
    },
    "outputs": [],
@@ -1263,8 +1264,8 @@
    "id": "47f58409",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-03T19:05:12.978707Z",
-     "start_time": "2023-04-03T19:05:12.976970Z"
+     "end_time": "2023-04-04T20:30:42.238912Z",
+     "start_time": "2023-04-04T20:30:42.234012Z"
     }
    },
    "outputs": [],
@@ -1290,8 +1291,8 @@
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-03T19:05:14.450798Z",
-     "start_time": "2023-04-03T19:05:12.981280Z"
+     "end_time": "2023-04-04T20:30:43.247106Z",
+     "start_time": "2023-04-04T20:30:42.241460Z"
     }
    },
    "outputs": [
@@ -1467,8 +1468,8 @@
    "id": "1e3ccaee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-03T19:05:15.933910Z",
-     "start_time": "2023-04-03T19:05:14.452000Z"
+     "end_time": "2023-04-04T20:30:44.225450Z",
+     "start_time": "2023-04-04T20:30:43.248164Z"
     }
    },
    "outputs": [
@@ -1660,8 +1661,8 @@
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-03T19:05:15.968911Z",
-     "start_time": "2023-04-03T19:05:15.935069Z"
+     "end_time": "2023-04-04T20:30:44.877520Z",
+     "start_time": "2023-04-04T20:30:44.226376Z"
     }
    },
    "outputs": [],
@@ -1967,8 +1968,8 @@
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-03T19:05:15.971604Z",
-     "start_time": "2023-04-03T19:05:15.970048Z"
+     "end_time": "2023-04-04T20:30:44.886113Z",
+     "start_time": "2023-04-04T20:30:44.881233Z"
     }
    },
    "outputs": [],
@@ -1998,8 +1999,8 @@
    "id": "d1bc6195",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-03T19:05:16.008859Z",
-     "start_time": "2023-04-03T19:05:15.972876Z"
+     "end_time": "2023-04-04T20:30:45.884563Z",
+     "start_time": "2023-04-04T20:30:44.888421Z"
     }
    },
    "outputs": [],
@@ -2310,8 +2311,8 @@
    "id": "75a9b3a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-03T19:11:29.107140Z",
-     "start_time": "2023-04-03T19:05:16.010001Z"
+     "end_time": "2023-04-04T20:36:53.007415Z",
+     "start_time": "2023-04-04T20:30:45.889225Z"
     }
    },
    "outputs": [],
@@ -2337,8 +2338,8 @@
    "id": "6920631b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-03T19:11:30.136683Z",
-     "start_time": "2023-04-03T19:11:29.113414Z"
+     "end_time": "2023-04-04T20:36:53.701974Z",
+     "start_time": "2023-04-04T20:36:53.009743Z"
     }
    },
    "outputs": [
@@ -2495,8 +2496,8 @@
    "id": "e899df18",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-03T19:11:31.019838Z",
-     "start_time": "2023-04-03T19:11:30.138012Z"
+     "end_time": "2023-04-04T20:36:54.326696Z",
+     "start_time": "2023-04-04T20:36:53.702794Z"
     }
    },
    "outputs": [
@@ -2673,7 +2674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
