--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -6,8 +6,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-04T20:30:39.773026Z",
-     "start_time": "2023-04-04T20:30:38.439796Z"
+     "end_time": "2023-04-04T21:31:56.506687Z",
+     "start_time": "2023-04-04T21:31:55.424499Z"
     }
    },
    "outputs": [],
@@ -45,8 +45,8 @@
    "id": "1b5c16f0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-04T20:30:39.776529Z",
-     "start_time": "2023-04-04T20:30:39.774737Z"
+     "end_time": "2023-04-04T21:31:56.510706Z",
+     "start_time": "2023-04-04T21:31:56.508684Z"
     }
    },
    "outputs": [],
@@ -98,8 +98,8 @@
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-04T20:30:39.806676Z",
-     "start_time": "2023-04-04T20:30:39.777336Z"
+     "end_time": "2023-04-04T21:31:56.540385Z",
+     "start_time": "2023-04-04T21:31:56.511464Z"
     }
    },
    "outputs": [],
@@ -357,8 +357,8 @@
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-04T20:30:39.809022Z",
-     "start_time": "2023-04-04T20:30:39.807545Z"
+     "end_time": "2023-04-04T21:31:56.543619Z",
+     "start_time": "2023-04-04T21:31:56.541665Z"
     }
    },
    "outputs": [],
@@ -388,8 +388,8 @@
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-04T20:30:39.811352Z",
-     "start_time": "2023-04-04T20:30:39.809827Z"
+     "end_time": "2023-04-04T21:31:56.545964Z",
+     "start_time": "2023-04-04T21:31:56.544440Z"
     }
    },
    "outputs": [],
@@ -438,8 +438,8 @@
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-04T20:30:39.813755Z",
-     "start_time": "2023-04-04T20:30:39.812170Z"
+     "end_time": "2023-04-04T21:31:56.548644Z",
+     "start_time": "2023-04-04T21:31:56.546950Z"
     }
    },
    "outputs": [],
@@ -484,12 +484,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "dfce6fd6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-04T20:30:39.821364Z",
-     "start_time": "2023-04-04T20:30:39.814494Z"
+     "end_time": "2023-04-04T21:38:19.185984Z",
+     "start_time": "2023-04-04T21:38:19.169897Z"
     }
    },
    "outputs": [],
@@ -593,14 +593,19 @@
     "    top_colnames = list(set(top_colnames))\n",
     "    for colname in top_colnames:\n",
     "        if outcome == \"diagnosis\":\n",
-    "            plt.scatter(original_df[\"DX_GROUP\"], original_df[colname])\n",
+    "            plt.scatter(original_df[\"DX_GROUP\"],\n",
+    "                        original_df[colname],\n",
+    "                        alpha=.2)\n",
     "        if outcome == \"age\":\n",
-    "            plt.scatter(original_df[\"AGE_AT_SCAN\"], original_df[colname])\n",
+    "            plt.scatter(original_df[\"AGE_AT_SCAN\"],\n",
+    "                        original_df[colname],\n",
+    "                        alpha=.2)\n",
     "        plt.ylabel(outcome)\n",
     "        plt.xlabel(colname)\n",
-    "        plt.title(\"scatter plot for top associated covariates\")\n",
-    "        plt.savefig(r\"scatter_\" + outcome + colname)\n",
-    "        plt.show()\n",
+    "        plt.title(r\"scatter plot for outcome vs the top associated covariates: \" + outcome +\n",
+    "                  r\" and \" + colname)\n",
+    "        plt.savefig(r\"scatter_\" + outcome + r\"_\" + colname)\n",
+    "        plt.close()\n",
     "    \"\"\")\n",
     "\n",
     "\n",
@@ -623,8 +628,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-04T20:30:41.053101Z",
-     "start_time": "2023-04-04T20:30:39.822328Z"
+     "end_time": "2023-04-04T21:31:57.666229Z",
+     "start_time": "2023-04-04T21:31:56.558433Z"
     }
    },
    "outputs": [],
@@ -928,8 +933,8 @@
    "id": "ee471054",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-04T20:30:41.061213Z",
-     "start_time": "2023-04-04T20:30:41.055736Z"
+     "end_time": "2023-04-04T21:31:57.671530Z",
+     "start_time": "2023-04-04T21:31:57.668338Z"
     }
    },
    "outputs": [],
@@ -954,8 +959,8 @@
    "id": "da95d107",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-04T20:30:42.224237Z",
-     "start_time": "2023-04-04T20:30:41.064127Z"
+     "end_time": "2023-04-04T21:31:58.748923Z",
+     "start_time": "2023-04-04T21:31:57.673303Z"
     }
    },
    "outputs": [],
@@ -1264,8 +1269,8 @@
    "id": "47f58409",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-04T20:30:42.238912Z",
-     "start_time": "2023-04-04T20:30:42.234012Z"
+     "end_time": "2023-04-04T21:31:58.758029Z",
+     "start_time": "2023-04-04T21:31:58.755404Z"
     }
    },
    "outputs": [],
@@ -1291,8 +1296,8 @@
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-04T20:30:43.247106Z",
-     "start_time": "2023-04-04T20:30:42.241460Z"
+     "end_time": "2023-04-04T21:31:59.718069Z",
+     "start_time": "2023-04-04T21:31:58.761491Z"
     }
    },
    "outputs": [
@@ -1468,8 +1473,8 @@
    "id": "1e3ccaee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-04T20:30:44.225450Z",
-     "start_time": "2023-04-04T20:30:43.248164Z"
+     "end_time": "2023-04-04T21:32:00.592002Z",
+     "start_time": "2023-04-04T21:31:59.718988Z"
     }
    },
    "outputs": [
@@ -1661,8 +1666,8 @@
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-04T20:30:44.877520Z",
-     "start_time": "2023-04-04T20:30:44.226376Z"
+     "end_time": "2023-04-04T21:32:01.177250Z",
+     "start_time": "2023-04-04T21:32:00.593040Z"
     }
    },
    "outputs": [],
@@ -1968,8 +1973,8 @@
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-04T20:30:44.886113Z",
-     "start_time": "2023-04-04T20:30:44.881233Z"
+     "end_time": "2023-04-04T21:32:01.185538Z",
+     "start_time": "2023-04-04T21:32:01.180915Z"
     }
    },
    "outputs": [],
@@ -1999,8 +2004,8 @@
    "id": "d1bc6195",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-04T20:30:45.884563Z",
-     "start_time": "2023-04-04T20:30:44.888421Z"
+     "end_time": "2023-04-04T21:32:02.033922Z",
+     "start_time": "2023-04-04T21:32:01.188660Z"
     }
    },
    "outputs": [],
@@ -2311,8 +2316,8 @@
    "id": "75a9b3a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-04T20:36:53.007415Z",
-     "start_time": "2023-04-04T20:30:45.889225Z"
+     "end_time": "2023-04-04T21:38:08.712658Z",
+     "start_time": "2023-04-04T21:32:02.038274Z"
     }
    },
    "outputs": [],
@@ -2338,8 +2343,8 @@
    "id": "6920631b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-04T20:36:53.701974Z",
-     "start_time": "2023-04-04T20:36:53.009743Z"
+     "end_time": "2023-04-04T21:38:09.415935Z",
+     "start_time": "2023-04-04T21:38:08.715415Z"
     }
    },
    "outputs": [
@@ -2496,8 +2501,8 @@
    "id": "e899df18",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-04T20:36:54.326696Z",
-     "start_time": "2023-04-04T20:36:53.702794Z"
+     "end_time": "2023-04-04T21:38:10.036068Z",
+     "start_time": "2023-04-04T21:38:09.416725Z"
     }
    },
    "outputs": [
