attempting to fix a reported error in simulations

--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -333,12 +333,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "e0697560",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-17T23:14:01.393672Z",
-     "start_time": "2023-04-17T23:14:01.360249Z"
+     "end_time": "2023-04-18T01:59:17.235271Z",
+     "start_time": "2023-04-18T01:59:17.224808Z"
     }
    },
    "outputs": [],
@@ -363,26 +363,23 @@
     "import multiprocess as mp\n",
     "from tqdm import tqdm\n",
     "import os\n",
-    "\n",
-    "csv_file = os.environ[\"SLURM_TMPDIR\"] + \\\n",
-    "    r\"/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
-    "\n",
-    "abide = pd.read_csv(csv_file, encoding=\"unicode_escape\", engine=\"c\")\n",
-    "_abide_name = abide.columns.tolist()[1:]\n",
-    "\n",
-    "# print(_abide_name)\n",
-    "\"\"\"\n",
-    "    if outcome == \"continuous\":\n",
-    "        py_2 = r\"\"\"\n",
     "import itertools\n",
-    "\n",
     "\n",
     "def convert2list(a):\n",
     "    b = np.asarray(a)\n",
     "    return b.tolist()\n",
-    "\n",
-    "\n",
+    "\"\"\"\n",
+    "    if outcome == \"continuous\":\n",
+    "        py_2 = r\"\"\"\n",
     "def sim_based_on_abide_continuous(pair):\n",
+    "    # read the data\n",
+    "    csv_file = os.environ[\"SLURM_TMPDIR\"] + \\\n",
+    "        r\"/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
+    "\n",
+    "    abide = pd.read_csv(csv_file, encoding=\"unicode_escape\", engine=\"c\")\n",
+    "    _abide_name = abide.columns.tolist()[1:]\n",
+    "\n",
+    "    # print(_abide_name)\n",
     "    _num_true_vars, _seed = pair\n",
     "    abide_name = _abide_name[1:-3]\n",
     "\n",
@@ -488,21 +485,21 @@
     "\n",
     "itrs = itertools.product(num_true_vars_list, seed_list)\n",
     "\n",
-    "output_array = np.array(list(map(sim_based_on_abide_continuous, itrs)))\n",
+    "output_array = np.array(list(map(sim_based_on_abide_continuous, tqdm(itrs))))\n",
     "output_array = output_array.reshape(5, 100, 3)\n",
     "np.save(r\"./ABIDE_simulations/ABIDE_sim_continuous\", output_array)\n",
     "\"\"\"\n",
     "    elif outcome == \"binary\":\n",
     "        py_2 = r\"\"\"\n",
-    "import itertools\n",
-    "\n",
-    "\n",
-    "def convert2list(a):\n",
-    "    b = np.asarray(a)\n",
-    "    return b.tolist()\n",
-    "\n",
-    "\n",
     "def sim_based_on_abide_binary(pair):\n",
+    "    # read the data\n",
+    "    csv_file = os.environ[\"SLURM_TMPDIR\"] + \\\n",
+    "        r\"/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
+    "\n",
+    "    abide = pd.read_csv(csv_file, encoding=\"unicode_escape\", engine=\"c\")\n",
+    "    _abide_name = abide.columns.tolist()[1:]\n",
+    "\n",
+    "    # print(_abide_name)\n",
     "    _num_true_vars, _seed = pair\n",
     "    abide_name = _abide_name[1:-3]\n",
     "\n",
@@ -596,7 +593,7 @@
     "\n",
     "itrs = itertools.product(num_true_vars_list, seed_list)\n",
     "\n",
-    "output_array = np.array(list(map(sim_based_on_abide_binary, itrs)))\n",
+    "output_array = np.array(list(map(sim_based_on_abide_binary, tqdm(itrs))))\n",
     "output_array = output_array.reshape(5, 100, 3)\n",
     "np.save(r\"./ABIDE_simulations/ABIDE_sim_binary\", output_array)\n",
     "\"\"\"\n",
